--- a/samples/WCAG-ch1/EPUB/default.css
+++ b/samples/WCAG-ch1/EPUB/default.css
@@ -272,7 +272,22 @@ figure figcaption {
   color: #585858;
   font-weight: 300;
 }
+.figure figcaption .caption .source,
+figure figcaption .caption .source {
+  margin-bottom: 0;
+}
+.figure figcaption .caption :last-child,
+figure figcaption .caption :last-child {
+  margin-bottom: 0;
+}
+.figure :last-child,
 figure :last-child {
+  margin-bottom: 0;
+}
+
+.inline,
+.figure-inline {
+  display: inline-block;
   margin-bottom: 0;
 }
 
@@ -521,6 +536,8 @@ nav section section section section section > header .subtitle, nav section sect
 }
 
 body > h1,
+section > h1,
+section > header > h1,
 nav > h1 {
   background: transparent;
   border: none;
@@ -537,6 +554,8 @@ nav > h1 {
   font-weight: 300;
 }
 body > h2,
+section > h2,
+section > header > h2,
 nav > h2 {
   background: transparent;
   border: none;
@@ -553,6 +572,8 @@ nav > h2 {
   font-weight: 300;
 }
 body > h3,
+section > h3,
+section > header > h3,
 nav > h3 {
   background: transparent;
   border: none;
@@ -569,6 +590,8 @@ nav > h3 {
   font-weight: 300;
 }
 body > h4,
+section > h4,
+section > header > h4,
 nav > h4 {
   background: transparent;
   border: none;
@@ -585,6 +608,8 @@ nav > h4 {
   font-weight: 500;
 }
 body > h5,
+section > h5,
+section > header > h5,
 nav > h5 {
   background: transparent;
   border: none;
@@ -601,6 +626,8 @@ nav > h5 {
   font-weight: 300;
 }
 body > h6,
+section > h6,
+section > header > h6,
 nav > h6 {
   background: transparent;
   border: none;
@@ -761,7 +788,7 @@ a:hover, a:focus, a:active {
 }
 
 .xref {
-  background: url(../images/iconmonstr-window-new-icon-20x20.png) no-repeat right center;
+  background: url(images/iconmonstr-window-new-icon-20x20.png) no-repeat right center;
   display: inline-block;
   padding: 0 23px 0 0;
 }
@@ -771,7 +798,7 @@ a.keyword, a[epub|type~='keyword'] {
   color: #1E7AB9;
   text-decoration: none;
   display: inline-block;
-  background: url(../images/iconmonstr-info-8-icon-20x20.png) no-repeat right center;
+  background: url(images/iconmonstr-info-8-icon-20x20.png) no-repeat right center;
   padding: 0 23px 0 0;
 }
 
@@ -815,6 +842,16 @@ a.keyword, a[epub|type~='keyword'] {
   color: #333;
   text-indent: -1.5em;
 }
+.practicelist {
+  background: transparent;
+  border-style: none;
+  border-width: 0;
+  border-color: transparent;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
+  border-radius: 0;
 
 .practices, [epub|type~='practices'], [epub|type~='assessments'] {
   background: transparent;
@@ -1399,17 +1436,20 @@ footer > .bibliography > header h1, footer > [epub|type~='bibliography'] > heade
   -webkit-border-radius: 0;
   border-radius: 0;
 }
-.chapter > header h1, [epub|type~='chapter'] > header h1 {
+.chapter > header h1, [epub|type~='chapter'] > header h1,
+.chapter > header h2, [epub|type~='chapter'] > header h2 {
   color: #585858;
   font-size: 2.52632em;
   line-height: 1.2;
   margin-top: 0.75em;
   margin-bottom: 0.75em;
 }
-.chapter > header h1 a, [epub|type~='chapter'] > header h1 a {
+.chapter > header h1 a, [epub|type~='chapter'] > header h1 a,
+.chapter > header h2 a, [epub|type~='chapter'] > header h2 a{
   color: #585858;
 }
-.chapter > header h1 .ordinal, [epub|type~='chapter'] > header h1 [epub|type~='ordinal'] {
+.chapter > header h1 .ordinal, [epub|type~='chapter'] > header h1 [epub|type~='ordinal'],
+.chapter > header h2 .ordinal, [epub|type~='chapter'] > header h2 [epub|type~='ordinal']{
   color: #468173;
   font-weight: 700;
   font-size: 1em;
@@ -1606,4 +1646,7 @@ h6 {
 p {
   orphans: 2;
   widows: 2;
+}
+.hidden {
+display:none;
 }
