--- a/samples/WCAG-ch1/EPUB/default.css
+++ b/samples/WCAG-ch1/EPUB/default.css
@@ -644,6 +644,11 @@ nav > h6 {
   font-weight: 500;
 }
 
+.bridgehead, [epub|type~='bridgehead'] {
+  margin-top: 1.1875em ;
+  margin-bottom: 0.59375em ;
+}
+
 b {
   font-weight: 700;
 }
@@ -852,7 +857,7 @@ a.keyword, a[epub|type~='keyword'] {
   -ms-border-radius: 0;
   -o-border-radius: 0;
   border-radius: 0;
-
+}
 .practices, [epub|type~='practices'], [epub|type~='assessments'] {
   background: transparent;
   border-style: none;
@@ -1059,9 +1064,11 @@ nav.toc ol:not(.tocentrylist) li {
 .nomark:not([type]),
 .index-entry-list:not([type]), [epub|type~='index-entry-list']:not([type]),
 .tocproductfrontmatter:not([type]),
-.tocproductbacktmatter:not([type]) {
+.tocproductbacktmatter:not([type]),
+.staticlist:not([type]){
   list-style: none;
 }
+
 
 .rearnotelist, [epub|type~='rearnotes'] {
   list-style-type: none;
@@ -1083,7 +1090,8 @@ nav.toc ol:not(.tocentrylist) li {
   -webkit-border-radius: 0;
   border-radius: 0;
 }
-.rearnotelist li .ordinal, [epub|type~='rearnotes'] li [epub|type~='ordinal'] {
+.rearnotelist li .ordinal, [epub|type~='rearnotes'] li [epub|type~='ordinal'],
+.staticlist li .ordinal, .staticlist li [epub|type~='ordinal']{
   font-weight: bold;
   margin-right: 1.5em;
 }
