--- a/css/samples.css
+++ b/css/samples.css
@@ -10,7 +10,7 @@ h1#site-name {
 }
 
 h1, h2, h3, h4, h5, h6 {
-   font-family: Cambria,Calibri,Verdana,sans-serif;
+   font-family: Arial,Verdana,sans-serif;
 }
 
 h2 {
